<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_medida"
    android:background="@color/Bag_color"
    tools:context="com.robot.maker.checkbox.MainActivity">


    <TextView
        android:id="@+id/textView_instruccion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/text_instruccion"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/editText_numeroA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_below="@+id/textView_instruccion"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/text_numero_a"
        android:inputType="number" />


    <EditText
        android:id="@+id/editText_numeroB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText_numeroA"
        android:layout_alignStart="@+id/editText_numeroA"
        android:layout_below="@+id/editText_numeroA"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/text_numero_b"
        android:inputType="number" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/editText_numeroB"
        android:layout_marginTop="16dp"
        android:text="@string/text_sumar" />

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/checkBox"
        android:layout_alignStart="@+id/checkBox"
        android:layout_below="@+id/checkBox"
        android:layout_marginTop="16dp"
        android:text="@string/text_restar" />

    <CheckBox
        android:id="@+id/checkBox3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/checkBox2"
        android:layout_alignRight="@+id/checkBox2"
        android:layout_below="@+id/checkBox2"
        android:layout_marginTop="16dp"
        android:text="@string/text_multiplicar" />

    <CheckBox
        android:id="@+id/checkBox4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/checkBox3"
        android:layout_alignStart="@+id/checkBox3"
        android:layout_below="@+id/checkBox3"
        android:layout_marginTop="16dp"
        android:text="@string/text_dividir" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:backgroundTint="@android:color/background_light"
        android:text="@string/text_calcular"
        android:textColor="@color/colorAccent"
        tools:targetApi="lollipop" />

    <TextView
        android:id="@+id/textView_resultado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/checkBox4"
        android:layout_marginTop="16dp" />
</RelativeLayout>
